--- a/testsuite/generate-format/tests/staged/api.yaml
+++ b/testsuite/generate-format/tests/staged/api.yaml
@@ -583,6 +583,10 @@ MultisigTransactionPayload:
       EntryFunction:
         NEWTYPE:
           TYPENAME: EntryFunction
+    1:
+      Script:
+        NEWTYPE:
+          TYPENAME: Script
 OneTimePaddedKey:
   NEWTYPESTRUCT:
     TUPLEARRAY:
