add corpus for multisig script

--- a/testsuite/generate-format/tests/staged/aptos.yaml
+++ b/testsuite/generate-format/tests/staged/aptos.yaml
@@ -529,6 +529,10 @@ MultisigTransactionPayload:
       EntryFunction:
         NEWTYPE:
           TYPENAME: EntryFunction
+    1:
+      Script:
+        NEWTYPE:
+          TYPENAME: Script
 OneTimePaddedKey:
   NEWTYPESTRUCT:
     TUPLEARRAY:
