decryption somewhat works

--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -14,12 +14,14 @@ rust-version = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
+aptos-batch-encryption = { workspace = true }
 aptos-cached-packages = { workspace = true }
 aptos-crypto = { workspace = true }
 aptos-global-constants = { workspace = true }
 aptos-ledger = { workspace = true }
 aptos-rest-client = { workspace = true }
 aptos-types = { workspace = true }
+ark-std = { workspace = true }
 base64 = { workspace = true }
 bcs = { workspace = true }
 ed25519-dalek-bip32 = { workspace = true }
