--- a/consensus/Cargo.toml
+++ b/consensus/Cargo.toml
@@ -14,6 +14,7 @@ rust-version = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
+ark-std = { workspace = true }
 aptos-batch-encryption = { workspace = true }
 aptos-bitvec = { workspace = true }
 aptos-bounded-executor = { workspace = true }
