--- a/crates/aptos/Cargo.toml
+++ b/crates/aptos/Cargo.toml
@@ -52,6 +52,7 @@ aptos-vm-genesis = { workspace = true }
 aptos-vm-logging = { workspace = true }
 aptos-vm-types = { workspace = true }
 aptos-workspace-server = { workspace = true }
+async-recursion = { workspace = true }
 async-trait = { workspace = true }
 backoff = { workspace = true }
 base64 = { workspace = true }
